force-app/main/default/objects/Archived_Appointment__c/Archived_Appointment__c.object-meta.xml
<CustomObject>
    <description>Object to store old data about appointments. Replaces the Scheduled_Appointment__c object after some time</description>
    <label>Archived Appointment</label>
    <nameField>
        <label>Archived Appointment Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Archived Appointments</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>