force-app/main/default/objects/Archived_Appointment__c/fields/Doctor__c.field-meta.xml
<CustomField>
    <fullName>Doctor__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Doctor__c object</description>
    <label>Doctor</label>
    <referenceTo>Doctor__c</referenceTo>
    <relationshipLabel>Archived Appointments</relationshipLabel>
    <relationshipName>Archived_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>