force-app/main/default/objects/Archived_Appointment__c/fields/Patient__c.field-meta.xml
<CustomField>
    <fullName>Patient__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Lookup to the Patient__c object</description>
    <label>Patient</label>
    <referenceTo>Patient__c</referenceTo>
    <relationshipLabel>Archived Appointments</relationshipLabel>
    <relationshipName>Archived_Appointments</relationshipName>
    <type>Lookup</type>
</CustomField>